# Magician

./: .env  .gitignore  Cargo.toml
src/: main.rs
src/migrations/: 001_init_script.sql
src/runtime/: context_keys.rs  event_handler.rs  mod.rs  runtime_client.rs
src/runtime/commands/: character.rs  mod.rs  profile.rs
src/runtime/commands/character_commands/: create.rs
src/runtime/commands/profile_commands/: deregister.rs  mod.rs  register.rs
src/runtime/sql_scripts/: characters.rs  discord_users.rs  mod.rs
src/startup/: title_splash.rs
src/utils/: mod.rs
src/utils/misc/: colour_codes.rs  help_menu.rs  logging.rs  mod.rs  template_config.rs
src/utils/runtime_utils/: context_keys.rs  event_handler.rs  mod.rs  runtime_client.rs
src/utils/startup/: mod.rs  parse_arguments.rs
