[package]
name = "magician"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = "0.4.41"
serenity = "0.12.4"
termion = "4.0.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"

